--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "sass": "^1.67.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "sass-loader": "^10.1.1",
